RESOLVED FIXED221061
AX: Long narrow tables should not be made in data tables unnecessarily
https://bugs.webkit.org/show_bug.cgi?id=221061
Summary AX: Long narrow tables should not be made in data tables unnecessarily
chris fleizach
Reported 2021-01-27 14:45:45 PST
Some tables might hae 1 column and many rows. This is done for layout purposes. However, there is AX logic to say if there are 20 rows, to always treat it as a table. I believe that logic should be amended to make it more strict in this case.
Attachments
patch (6.81 KB, patch)
2021-01-27 14:49 PST, chris fleizach
no flags
Radar WebKit Bug Importer
Comment 1 2021-01-27 14:45:53 PST
chris fleizach
Comment 2 2021-01-27 14:49:36 PST
Andres Gonzalez
Comment 3 2021-01-28 06:51:47 PST
(In reply to chris fleizach from comment #2) > Created attachment 418586 [details] > patch Looks good. Thanks!
EWS
Comment 4 2021-01-28 11:55:27 PST
Committed r272024: <https://trac.webkit.org/changeset/272024> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418586 [details].
Note You need to log in before you can comment on or make changes to this bug.